Fix edit budget icon vertical alignment in Total Budget card

--- a/src/app/budget/budget-overview/budget-overview.component.scss
+++ b/src/app/budget/budget-overview/budget-overview.component.scss
@@ -58,14 +58,18 @@
   }
 
   .edit-budget-btn {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     width: 24px;
     height: 24px;
-    line-height: 24px;
+    padding: 0;
 
     mat-icon {
       font-size: 16px;
       width: 16px;
       height: 16px;
+      line-height: 16px;
       color: #888;
     }
   }
